# SuffixArray

./: .gitignore  CMakeLists.txt  Makefile  NaiveAlgorithm.cpp  NaiveAlgorithm.h  README.md  main.cpp  printFunctions.cpp  printFunctions.h  suffixArray.cpp  suffixArray.h  test.cpp
tests/: 20000-Leagues-Under-the-Sea.txt  20000-Leagues-Under-the-Sea_patterns.txt  dna.txt  dna_large.txt  dna_large_patterns.txt  dna_patterns.txt  harry.txt  harry_patterns.txt  small.txt  small_patterns.txt  smallest.txt  smallest_patterns.txt
